2023-03-14  Sauro Menna  <smenna@users.sourceforge.net>
    * Version 1.03.05
    * Extended  OUTFIL without filename (FILES or FNAMES),  the data set will be processed in GIVE file also for SAVE option
    * In the OUTFIL option you can also indicate the same GIVE file name 
    

2023-03-13  Sauro Menna  <smenna@users.sourceforge.net>
    * Version 1.03.05
    * Changed OUTFIL without filename (FILES or FNAMES),  the data set will be processed in GIVE file
    * Fix problems in OUTFIL START/ENDREC
    * Update Testcase OUTFIL Cobol program  and takefile somisqfmlt03_take.prm 
    * Update Testcase START/ENDREC Cobol program

2023-03-09  Sauro Menna  <smenna@users.sourceforge.net>
    * Fix problem in OUTFIL SAVE Option 

2023-03-09  Sauro Menna  <smenna@users.sourceforge.net>
    * Fix problem in OUTFIL SAVE Option 
    * Updated testcase COBOL source 
    * Updated header files to include libcob.h

2023-02-20  Sauro Menna  <smenna@users.sourceforge.net>
    * New test case EBCDIC option 
    * Modify test case to support libcob 3.2 library and earlier versions
    * Modify gcsysop.c to get GNUCobol version
    * To enable testcase EBCDIC get version from output gcsysop   
    * Fix memory Leaks in E15 and E35 function
    * Use cob_tiny function to terminate the Cobol RTS (Thanks to Chuck Haatvedt)
    * Test - Fix take file somisqfch01_take.prm, somisqfmlt03_take.prm
    * FIX FINDREP Control statement (Thanks David Declerck) Enable format 'FINDREP = ( arg1, .... )'
    * job.c fix memory leaks, utils.c assign NULL in free function
    
2023-01-25  David Declerck  <david.declerck@ocamlpro.com>
    * Update EBCDIC table handling through the -febcdic-table option to account for the changes in GnuCOBOL 3.2

2023-01-04  David Declerck  <david.declerck@ocamlpro.com>
    * New options -fcolseq and -febcdic-table allowing to specify the collating sequence (ASCII/EBCDIC) and EBCDIC table to use for character comparisons (available only if using libcob 3.2)
